codepkg/objects/Order_Version__c.object
<CustomObject>
    <fields>
        <fullName>Old_Version_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Version Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Versions</relationshipLabel>
        <relationshipName>Order_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order(To Be Deleted)</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Versions</relationshipLabel>
        <relationshipName>Order_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Version</label>
    <nameField>
        <displayFormat>OV-{00000}</displayFormat>
        <label>Order Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>